# ultimate-tauri-template

./: .editorconfig  .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
tauri-template-app/: Cargo.toml  build.rs  tauri.conf.json
tauri-template-ui/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-template-ui/src/: App.tsx  main.tsx
